<resources>
    <string name="app_name">RomanDigital</string>
    <string name="app_subtitle">A Digital Clock with Roman Numeral Display</string>
    <string name="app_version_label">Version %1$s</string>
    <string name="title_activity_settings">RomanDigital App Settings</string>
    <string name="title_activity_about">About</string>
    <string name="format_title">Format</string>
    <string name="format_off">24-hour clock</string>
    <string name="format_on">12-hour clock</string>
    <string name="alignment_title">Alignment</string>
    <string name="alignment_off">Align to Fixed Separator</string>
    <string name="alignment_on">Center</string>
    <string name="ampm_title">Separator</string>
    <string name="ampm_off">Always show as \':\'</string>
    <string name="ampm_on">Show as \'·\' for AM and \':\' for PM</string>
    <string name="keepon_title">Keep screen on</string>
    <string name="charging_title">^^^ only when charging</string>
    <string name="civ_fill">XXXXXXXXXXXX</string>
    <string name="mil_fill">XXXXXXXXXXXXX</string>
    <string name="vert_fill">
"XXXXX
XXXXXXX"
    </string>
    <string name="menuitem_settings">Settings</string>
    <string name="menuitem_about">About</string>
    <string name="copyright">Copyright © 2024–2026 David Yockey</string>
    <string name="apache_license_notice">
"Licensed under the Apache License, Version 2.0 (the "License"); you may only use this software in compliance with the License. You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."
    </string>
    <string name="notice_re_google">"<b>NOTICE</b> :
        Starting in September 2026, Google is planning to impede unapproved app installation on our Android devices. For more information, see https://itsfoss.com/news/android-developer-verification/"</string>
    <string name="bullet">"* "</string>
    <string name="whats_new">"<b>WHAT\'S NEW IN THIS VERSION</b>"</string>
        <string name="added">Added:</string>
        <string name="changed">Changed:</string>
        <string name="fixed">Fixed:</string>
        <string name="new_item_1">Vertical time display layout (hours above minutes), independently selectable for the app and each widget</string>
        <string name="new_item_2">Minimum widget cell size to 1x1</string>
        <string name="new_item_3">Crash resulting from ForegroundServiceStartNotAllowedException being thrown. The fix in version 3.0.2 was found to only be effective under test conditions. Apologies to users who have experienced a crash due to this issue.</string>
        <string name="new_item_4">Lack of sufficient space on a widget, under some circumstances, for a time zone label to be properly displayed.</string>
    <string name="solicitation">
"If you like RomanDigital and would like to tangibly express your thanks, dropping the value of a coffee of the quality of your choice at https://paypal.me/dfyockey would be greatly appreciated 🙂"
    </string>
    <string name="source">
"You may obtain RomanDigital in source form at

    https://github.com/dfyockey/RomanDigital"
    </string>
    <string name="credits_header">
APPRECIATION &amp; THIRD-PARTY LICENSING
    </string>
    <string name="BlackyHawky_thanks">
"Thanks go to BlackyHawky and their contributors for their excellent Clock app (https://github.com/BlackyHawky/Clock) that provided motivation to implement improved autosizing of the RomanDigital app widget time display through observation of the BlackyHawky Clock digital clock widget.

The BlackyHawky Clock source code is licensed under GNU GPL v3.0 which is incompatible with RomanDigital's Apache 2.0 license. To avoid possible legal entanglements, the BlackyHawky Clock source code was neither copied nor reviewed in development of the RomanDigital app widget."
    </string>
    <string name="woheller69_thanks">
"Thanks also to woheller69 and their contributors for their FreeDroidWarn library which provided inspiration for the Google policy change notice in the About activity and provided an implementation example of a popup shown only after both app installation and update. To the extent that it applies to any code in the RomanDigital popup implementation, the following is provided:
    </string>
    <string name="FreeDroidWarn_copyright">"FreeDroidWarn
(https://github.com/woheller69/FreeDroidWarn)
Copyright © 2025–2026 woheller69"</string>
    <string name="dependencies_header">
"Further thanks go to the developers of the following software included in RomanDigital:"
    </string>
    <string name="acra_license_notice">
"Application Crash Reporting for Android
Copyright © 2013 Kevin Gaudin
https://acra.ch

This product is licensed under the terms of the Apache Software License 2.0. See the LICENSE file or

    https://www.apache.org/licenses/LICENSE-2.0

for the full license text."
    </string>
    <string name="googlefonts_copyright_notice">
"Google Fonts

* Copyright 2011 The Roboto Project Authors
  (https://github.com/googlefonts/roboto-classic)
* Copyright 2015 The Roboto Mono Project Authors
  (https://github.com/googlefonts/robotomono)
* Copyright 2020 The Roboto Serif Project Authors
  (https://github.com/googlefonts/RobotoSerif)
    </string>
    <string name="googlefonts_license_notice">
"This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is copied below, and is also available with a FAQ at: https://openfontlicense.org

-----------------------------------------------------------
SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
-----------------------------------------------------------

PREAMBLE
The goals of the Open Font License (OFL) are to stimulate worldwide development of collaborative font projects, to support the font creation efforts of academic and linguistic communities, and to provide a free and open framework in which fonts may be shared and improved in partnership with others.

The OFL allows the licensed fonts to be used, studied, modified and redistributed freely as long as they are not sold by themselves. The fonts, including any derivative works, can be bundled, embedded, redistributed and/or sold with any software provided that any reserved names are not used by derivative works. The fonts and derivatives, however, cannot be released under any other type of license. The requirement for fonts to remain under this license does not apply to any document created using the fonts or their derivatives.

DEFINITIONS
"Font Software" refers to the set of files released by the Copyright Holder(s) under this license and clearly marked as such. This may include source files, build scripts and documentation.

"Reserved Font Name" refers to any names specified as such after the copyright statement(s).

"Original Version" refers to the collection of Font Software components as distributed by the Copyright Holder(s).

"Modified Version" refers to any derivative made by adding to, deleting, or substituting -- in part or in whole -- any of the components of the Original Version, by changing formats or by porting the Font Software to a new environment.

"Author" refers to any designer, engineer, programmer, technical writer or other person who contributed to the Font Software.

PERMISSION &amp; CONDITIONS
Permission is hereby granted, free of charge, to any person obtaining a copy of the Font Software, to use, study, copy, merge, embed, modify, redistribute, and sell modified and unmodified copies of the Font Software, subject to the following conditions:

1) Neither the Font Software nor any of its individual components, in Original or Modified Versions, may be sold by itself.

2) Original or Modified Versions of the Font Software may be bundled, redistributed and/or sold with any software, provided that each copy contains the above copyright notice and this license. These can be included either as stand-alone text files, human-readable headers or in the appropriate machine-readable metadata fields within text or binary files as long as those fields can be easily viewed by the user.

3) No Modified Version of the Font Software may use the Reserved Font Name(s) unless explicit written permission is granted by the corresponding Copyright Holder. This restriction only applies to the primary font name as presented to the users.

4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font Software shall not be used to promote, endorse or advertise any Modified Version, except to acknowledge the contribution(s) of the Copyright Holder(s) and the Author(s) or with their explicit written permission.

5) The Font Software, modified or unmodified, in part or in whole, must be distributed entirely under this license, and must not be distributed under any other license. The requirement for fonts to remain under this license does not apply to any document created using the Font Software.

TERMINATION
This license becomes null and void if any of the above conditions are not met.

DISCLAIMER
THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN THE FONT SOFTWARE."
    </string>
    <string name="relay_service_description">Service to relay Android\'s minute tick to RomanDigital\'s widgets</string>
    <string name="channel_id">RelayServiceChannel</string>
    <string name="channel_name">Minute Tick Relay Service</string>
    <string name="channel_description">Notify the user that the service to inform widgets when to update is running</string>
    <string name="notification_content_text">Relaying minute ticks to the widget(s)</string>
    <string name="notification_id">42</string>
    <string name="appwidget_text">XIII:XXXVIII</string>
    <string name="app_widget_description">Digital Clock with Roman Numeral Display</string>
    <string name="title_widget_settings">RomanDigital Widget Settings</string>
    <string name="tz_above_time">Time zone label above time</string>
    <string name="time_only">Time only</string>
    <string name="tz_below_time">Time zone label below time</string>
    <string name="default_tz">America/New_York</string>
    <string name="left">false</string>
    <string name="right">true</string>
    <string name="option_a">Option a</string>
    <string name="option_b">Option b</string>
    <string name="app_settings_scrollview">App Settings Scrollview</string>
    <string name="widget_settings_scrollview">Widget Settings Scrollview</string>
    <string name="dialog_text">An error has caused RomanDigital to stop running. The developer can work to fix it, but only if he finds out about it.\n\nIf you have an email app set up then you can help!\n\nClick OK to automatically generate an email with bug report attached that you can then send.\n\nYou can add any comments regarding the crash that you think might be helpful to the autogenerated email.\n\nYour email address won\'t be kept or otherwise used unless you ask a question or provide a comment necessitating a reply.\n\nThanks in advance!</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hexcode_hint">RRGGBB hex color code</string>
    <string name="reset_setting">Reset Setting</string>
</resources>