<?xml version="1.0" encoding="utf-8"?>

<!--
/*
 * about_activity.xml
 * - This file is part of the Android app RomanDigital
 *   and is a layout resource
 *
 * Copyright © 2024,2026 David Yockey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <View
        android:id="@+id/spacerAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svAbout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacerAbout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp" >

            <!-- Start of Masthead -->

            <TextView
                android:id="@+id/mastheadTitle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:gravity="center_horizontal"
                android:paddingTop="25dp"
                android:text="@string/app_name"
                android:textColor="@color/clock_red"
                app:autoSizeMaxTextSize="48sp"
                app:autoSizeTextType="uniform"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mastheadSubtitle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/app_subtitle"
                app:autoSizeMaxTextSize="16sp"
                app:autoSizeTextType="uniform"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mastheadTitle" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/app_version_label"
                android:textAlignment="center"
                android:textSize="12sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mastheadSubtitle" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@+id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/tvVersion" />

            <!-- End of Masthead -->

            <!--
                Start of Content

                Note: constraintStart_toStartOf of the following TextViews except @id/tvLicense are
                set to the same @id/tvLicense's Start and End so that all content TextViews float
                horizontally as a block centered on the screen.
            -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/copyright"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <!-- This view's width controls the maximum width of the display! -->
            <net.diffengine.romandigitalclock.component.TextViewEC
                android:id="@id/tvLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:maxWidth="600dp"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:background="#16A0A0A0"
                android:text="@string/license_notice"
                android:textSize="14sp"
                android:typeface="sans"
                android:ellipsize="end"
                app:initCollapsed="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:id="@+id/after_tvLicence"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/tvLicense" />

            <TextView
                android:id="@+id/notice_re_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingLeft="@dimen/txtblk_horiz_padding"
                android:paddingRight="@dimen/txtblk_horiz_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/notice_re_google"
                android:textSize="14sp"
                android:typeface="sans"
                android:textColor="#90000000"
                android:background="#60FF8000"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/after_tvLicence" />

            <View
                android:id="@+id/after_notice_re_google"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/notice_re_google" />

            <TextView
                android:id="@+id/new_in_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/new_in_version"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/after_notice_re_google" />

            <View
                android:id="@+id/after_new_in_version"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/new_in_version" />

            <TextView
                android:id="@+id/solicitation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/solicitation"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/after_new_in_version"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divide_from_solicitation"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/solicitation" />

            <TextView
                android:id="@+id/source_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/source"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divide_from_solicitation"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divide_from_code"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/source_code" />

            <TextView
                android:id="@+id/credits_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/credits_header"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divide_from_code"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/BlackyHawky"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingLeft="@dimen/license_horiz_padding"
                android:paddingRight="@dimen/license_horiz_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/BlackyHawky_thanks"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/credits_header"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divide_from_BlackyHawky"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/BlackyHawky" />

            <TextView
                android:id="@+id/tvDependencyHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/dependencies_header"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divide_from_BlackyHawky"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divide_from_dependency_header"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/tvDependencyHeader" />

            <TextView
                android:id="@+id/tvACRA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:maxWidth="600dp"
                android:paddingLeft="@dimen/license_horiz_padding"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingRight="@dimen/license_horiz_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/acra_license_notice"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divide_from_dependency_header"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/divide_from_ACRA"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/tvACRA" />

            <TextView
                android:id="@+id/tvGoogleFontsCopyright"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingTop="@dimen/txtblk_vert_padding"
                android:paddingLeft="@dimen/license_horiz_padding"
                android:paddingRight="@dimen/license_horiz_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/googlefonts_copyright_notice"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/divide_from_ACRA"
                tools:ignore="TextContrastCheck" />

            <net.diffengine.romandigitalclock.component.TextViewEC
                android:id="@+id/tvGoogleFontsLicense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="#16A0A0A0"
                android:linksClickable="true"
                android:maxWidth="600dp"
                android:paddingLeft="@dimen/license_horiz_padding"
                android:paddingRight="@dimen/license_horiz_padding"
                android:paddingBottom="@dimen/txtblk_vert_padding"
                android:text="@string/googlefonts_license_notice"
                android:textSize="14sp"
                android:typeface="sans"
                android:ellipsize="end"
                app:initCollapsed="true"
                app:layout_constraintEnd_toEndOf="@id/tvLicense"
                app:layout_constraintStart_toStartOf="@id/tvLicense"
                app:layout_constraintTop_toBottomOf="@id/tvGoogleFontsCopyright"
                tools:ignore="VisualLintLongText,TouchTargetSizeCheck" />

            <!-- End of Content -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>